# dotnet-project-template/doc/openapi.yml
@@ -127,70 +127,6 @@ paths:
             text/plain:
               schema:
                 $ref: '#/components/schemas/InsertMemberResponse'
-  /api/v2/members:cursor:
-    get:
-      tags:
-        - Member
-      operationId: GetMembersCursor
-      responses:
-        '200':
-          description: OK
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/GetMemberResponseCursorPaginatedList'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetMemberResponseCursorPaginatedList'
-            text/json:
-              schema:
-                $ref: '#/components/schemas/GetMemberResponseCursorPaginatedList'
-          headers: 
-            x-next-page-token:
-              description: The next page token
-              schema:
-                type: string
-            x-next-previous-token:
-              description: The next previous token
-              schema:
-                type: string
-  /api/v2/members:offset:
-    get:
-      tags:
-        - Member
-      operationId: GetMemberOffset
-      responses:
-        '200':
-          description: OK
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/GetMemberResponsePaginatedList'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetMemberResponsePaginatedList'
-            text/json:
-              schema:
-                $ref: '#/components/schemas/GetMemberResponsePaginatedList'
-  /api/v2/members:
-    post:
-      tags:
-        - Member
-      operationId: InsertMember1
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/InsertMemberRequest'
-          text/json:
-            schema:
-              $ref: '#/components/schemas/InsertMemberRequest'
-          application/*+json:
-            schema:
-              $ref: '#/components/schemas/InsertMemberRequest'
-      responses:
-        '200':
-          description: OK
 components:
   schemas:
     GetMemberResponse:
